--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     Опубликовала <a href="#">Анна Потапова</a>
                     18 сентября 2022
                 </div>
-                <img src="blob:https://imgur.com/3f232bd3-1ee8-49f0-ab5a-66a00c7070e5">  
+                <img src="https://i.imgur.com/i65vX7V.jpeg">  
                 <p>Тарасова и Морозов, Хабибуллина и Княжук выйдут на лед с короткими программами.</p> 
         </article>
     </section>            
